--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>This is my final project </h1>
-    <p>Project started</p>
+   <header>
+       <div class="wrapper">
+           <div class="logo">
+               <img src="images/strawberryclipart.png" alt="">
+           </div>
+           <ul class="nav-area">
+               
+           </ul>
+       </div>
+   </header>
 </body>
 </html>
