--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                <img src="images/strawberryclipart.png" alt="">
            </div>
            <ul class="nav-area">
-               
+               <li><a href="#">home</a></li>
+               <li><a href="#">recipe</a></li>
+               <li><a href="#">sign-up</a></li>
            </ul>
        </div>
    </header>
