--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                <li><a href="#">sign-up</a></li>
            </ul>
        </div>
+
+       <div class="welcome-text">
+           <h1>We like the Sweets</h1>
+           <a href="#">Contact</a>
+       </div>
    </header>
 </body>
 </html>
