--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
            <div class="logo">
                <img src="images/strawberryclipart.png" alt="">
            </div>
-           <ul class="nav-area">
-               <li><a href="#">home</a></li>
-               <li><a href="#">recipe</a></li>
-               <li><a href="#">sign-up</a></li>
-           </ul>
+           <nav>
+               <ul class="nav-area">
+                   <li><a href="#">home</a></li>
+                   <li><a href="#">recipe</a></li>
+                   <li><a href="#">sign-up</a></li>
+               </ul>
+           </nav>
        </div>
 
        <div class="welcome-text">
