--- a/recipe.html
+++ b/recipe.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/recipe.html">Recipe></a></li>
-                <li><a href="#">Sign-up"></a></li>
+                <li><a href="/recipe.html">Recipe</a></li>
+                <li><a href="#">Sign-up</a></li>
             </ul>
         </nav>
 
