--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        </div>
 
        <div class="welcome-text">
-           <h1>We like the Sweets</h1>
+           <h1>Sweet Pizza To Make At Home</h1>
            <a href="#">Contact</a>
        </div>
    </header>
