--- a/recipe.html
+++ b/recipe.html
@@ -85,8 +85,13 @@
     <small>-John Lennon</small>
 </blockquote>
 </main> 
+<footer>
+<p><a href="#">Recipe and Information can be found here.</a></p>
+</footer>
+    </body></html>
 
-
+    </body>
+    </html>
 
         
                     
