--- a/form.html
+++ b/form.html
@@ -8,6 +8,68 @@
 </head>
 <body>
     <div id="wrapper"></div>
-    
+    <nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/recipe.html>">Recipe</a></li>
+            <li><a href="/form.html">Sign Up</a></li>
+        </ul>
+    </nav>
+
+<header>
+    <h1>Sign Up for more strawberry Recipes</h1>
+    <h2>Our Policies</h2>
+</header>
+
+<section class="policies">
+    <ul>
+        <li>Always enjoy yourself using our recipes</li>
+        <li>Branch out and try new things...or fruits</li>
+        <li>Don't forget to give your desert some love</li>
+    </ul>
+</section>
+
+<section class="recipes signup">
+    <form method="post" name="recipes signup" data-netlify="true">
+        <div>
+            <label for="firstName">First Name:</label>
+            <input type="text" name="firstname" id="firstname" placeholder="first name" required>
+        </div>
+
+       <div>
+           <label for="lastName">Last Name:</label>
+           <input type="text" name="lastName" id="lastName" placeholder="last name" required>
+       </div>
+
+       <div>
+           <label for="email">Email</label>
+           <input type="text" name="email" id="email" placeholder="email" required>
+       </div>
+
+       <div>
+           <label for="phone">Phone</label>
+           <input type="text" name="phone" id="phone" placeholder="phone" required>
+       </div>
+
+       <div>
+           <label for="notes">Notes</label>
+           <textarea id="notes" name="notes">
+</textarea>
+       </div>
+
+       <button type="submit">Submit</button>
+       <button type="reset">Reset</button>
+
+       
+    </form>
+</section>
+
+<footer>
+    <small>
+        Pizza Sweets (&copy;) <br>
+        Chicopee, MA
+        <br>
+    </small>
+</footer>
 </body>
 </html>
