--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
            </div>
            <nav>
                <ul class="nav-area">
-                   <li><a href="#">home</a></li>
-                   <li><a href="#">recipe</a></li>
-                   <li><a href="#">sign-up</a></li>
+                   <li><a href="/index.html">home</a></li>
+                   <li><a href="/recipe.html">recipe</a></li>
+                   <li><a href="/form.html">sign-up</a></li>
                </ul>
            </nav>
        </div>
