--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
        <div class="welcome-text">
            <h1>Sweet Pizza To Make At Home</h1>
-           <a href="#">Contact</a>
+           <a href="/form.html">Contact</a>
        </div>
    </header>
 </body>
