--- a/recipe.html
+++ b/recipe.html
@@ -86,7 +86,7 @@
 </blockquote>
 </main> 
 <footer>
-<p><a href="#">Recipe and Information can be found here.</a></p>
+<p><a href="/recipe.html">Recipe and Information can be found here.</a></p>
 </footer>
     </body></html>
 
